sumo/tests/sumo/extended/vaporizer/errors/begin_not_numeric/errors.sumo
Warning: Emitter are deprecated; use departpos/departspeed within routes instead.
Error: Attribute 'begin' in definition of a vaporizer is not a time value.
Quitting (on error).
